# cmake-strawman

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: main.cpp  sqr.h
test/: CMakeLists.txt  test.cpp
